# uplink

./: Cargo.toml
common/locales/en-US/: main.ftl
common/src/warp_runner/: mod.rs
common/src/warp_runner/manager/: mod.rs
common/src/warp_runner/manager/commands/: constellation_commands.rs
extension_example/src/: lib.rs
extensions/src/: lib.rs
kit/: Cargo.toml
kit/src/components/: mod.rs
kit/src/components/message/: mod.rs
kit/src/components/message_reply/: mod.rs
kit/src/components/modal/: mod.rs  styles.scss
kit/src/elements/file/: mod.rs  style.scss
kit/src/elements/folder/: style.scss
kit/src/elements/textarea/: mod.rs
kit/src/layout/chatbar/: mod.rs
native_extensions/emoji_selector/src/: lib.rs
shared/: Cargo.toml
ui/: Cargo.toml
ui/src/: compiled_styles.css  main.rs  style.scss
ui/src/components/chat/: compose.rs  script.js  sidebar.rs
ui/src/components/chat/compose/: messages.rs
ui/src/components/friends/: add.rs
ui/src/components/settings/: download_modal.rs  mod.rs  styles.scss
ui/src/components/settings/sub_pages/: about.rs
ui/src/layouts/: create_account.rs  file_preview.rs  style.scss  unlock.rs
ui/src/layouts/storage/: functions.rs  mod.rs
ui/src/warp_runner/: mod.rs
ui/src/warp_runner/manager/commands/: constellation_commands.rs
ui/tmp/new12338/: Config.json  state.json
ui/tmp/new12338/warp/: .cache_id  .id  .index_id  .keystore
ui/tmp/new12338/warp/messages/: 6bd1262a-9015-4741-1a8b-bf417150ee90
ui/tmp/new24/: state.json
ui/tmp/new24/warp/: .cache_id  .id  .index_id  .keystore
(+4 files in other folders)
