[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unic-langid = "0.9.1"
isolang = "2.2.0"
fluent-templates = "0.8.0"
warp = { git = "https://github.com/Satellite-im/Warp", rev = "d0838833856c87799801c6584e407ff9eeba4876" }
